<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Weather Averages</string>

    <string name="communication">Communication</string>
    <string name="rate_and_review">Rate and review</string>
    <string name="share">Share</string>

    <string name="more_apps">More applications</string>

    <string name="preferences">Preferences</string>
    <string name="units">Units</string>
    <string name="temperature">Temperature</string>
    <string name="speed">Speed</string>
    <string name="localization">Localization</string>
    <string name="language">Language</string>

    <string name="alert_location_title">Enable GPS</string>
    <string name="alert_location_message">Please enable GPS on your device</string>
    <string name="alert_wireless_title">Enable Internet</string>
    <string name="alert_wireless_message">Please enable Internet on your device</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_home">Forecast</string>
    <string name="title_map">Map</string>
    <string name="pressure">Pressure %1$.0f hPa</string>
    <string name="humidity">Humidity %d%%</string>
    <string name="wind">Wind %1$.1f %2$s</string>
    <string name="direction">Direction %s</string>
    <string name="title_info">Info</string>
    <string name="pref_pressure">Pressure</string>
    <string name="city">City</string>

    <string name="search">Search</string>
    <string name="enter_city_name">Enter a city name:</string>
    <string name="city_name">London</string>

    <string name="rewarded_ads">Rewarded ads</string>
    <string name="support_us">Support us:\n\nTo get two more tries to select a place, we will show you a rewarded video ad.\nThis helps us cover the costs of Google Play services.\n\nThank you for understanding.</string>
    <string name="reward">Reward</string>
    <string name="donate">Donate</string>
    <string name="later">Later</string>

    <string name="forecast">Forecast</string>
    <string name="map">Map</string>
    <string name="history">History</string>

    <string name="settings">Settings</string>
    <string name="authentication">Authentication</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="user_interface">User Interface</string>
    <string name="units_of_measurement">Units of measurement</string>
    <string name="system">System</string>
    <string name="navigation">Navigation</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>

    <string name="slogan_openweathermap">Powered by OpenWeatherMap</string>
    <string name="select_place_or_search_city">Select place on map or search city by name on toolbar</string>

    <string name="asset_png" translatable="false">%s@2x.png</string>
    <string name="asset_jpg" translatable="false">HSAM5xYzQ7Xs7Zy/PmGBow==</string>
    <string name="current_temperature" translatable="false">%1$.1f %2$s</string>
    <string name="hourly_temperature" translatable="false">%1$.1f..%2$.1f %3$s</string>
    <string name="hours_range" translatable="false">%1$s..%2$s</string>
    <string name="string" translatable="false">%s</string>
    <string name="login" translatable="false">Login</string>
    <string name="preference" translatable="false">Preference</string>
    <string name="default_theme">Default</string>
    <string name="theme">Theme</string>

    <string name="asset_image" translatable="false">file:///android_asset/%s.png</string>
    <string name="formatted_lat_lon" translatable="false">( %2.4f , %2.4f )</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="nav_header_title" translatable="false">@string/app_name</string>
    <string name="nav_header_subtitle" translatable="false">@string/slogan_openweathermap</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
</resources>