<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/navigation">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_forecast"
                    android:icon="@drawable/ic_nav_forecast"
                    android:title="@string/forecast" />
                <item
                    android:id="@+id/nav_map"
                    android:icon="@drawable/ic_nav_map"
                    android:title="@string/map" />
                <item
                    android:id="@+id/nav_info"
                    android:icon="@drawable/ic_nav_history"
                    android:title="@string/history" />
            </group>
        </menu>
    </item>
</menu>