<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:startDestination="@+id/nav_forecast">

    <fragment
        android:id="@+id/nav_forecast"
        android:name="ua.in.khol.oleh.touristweathercomparer.ui.forecast.ForecastView"
        android:label="@string/forecast"
        tools:layout="@layout/view_forecast" />

    <fragment
        android:id="@+id/nav_map"
        android:name="ua.in.khol.oleh.touristweathercomparer.ui.map.MapView"
        android:label="@string/map"
        tools:layout="@layout/view_map" />

    <fragment
        android:id="@+id/nav_info"
        android:name="ua.in.khol.oleh.touristweathercomparer.ui.history.HistoryView"
        android:label="@string/history"
        tools:layout="@layout/view_history" />
</navigation>